--- a/src/component/navigation/Navigation.css
+++ b/src/component/navigation/Navigation.css
@@ -1,40 +1,10 @@
-/* .App {
-  text-align: center;
-  margin-top: 5%;
-} */
+#main-nav {
+  direction: rtl;
+  align-items: baseline;
+  justify-content: space-evenly;
+  margin-left: 20%;
+}
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    /* background-color: white; */
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: rgb(112, 38, 38);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: rgba(61, 58, 61, 0.37);
-    color: white;
-  }
-  
-  .active {
-    background-color: #0e0f0e;
-  }
-  
-  /* ::placeholder{
-    text-align: right;
-  } */
-  
-  
-  
+.link-container Link{
+  margin-left: 20px;
+}
