--- a/src/component/shop/order/Order.css
+++ b/src/component/shop/order/Order.css
@@ -1,12 +1,18 @@
+
+
 .order-basket{
     display: inline-block;
     width: 300px;
     height: 550px;
-    border: black 2px solid;
+    border: black 1px solid;
 }
-.order-item{
+/* .order-item{
     min-height: 40px;
     border: gray 1px solid;
+} */
+
+#search-input {
+    float: right;
 }
 
 .order-item p{
@@ -17,11 +23,10 @@
 .search-order {
     display: inline-block
 }
-.yellow{
-   
-    background-color: yellow;
-    background-size:2px ;
+.highlight{
+  background-color: yellow;
 }
+
 .form{
    width:20%;
    float: right;
@@ -29,7 +34,14 @@
 }
 .label{
     margin: 15px 4px 4px 0px;
-
     text-align: right;
     display: block;
 }
+
+table, th, td {
+    width: 100%;
+    border: 1px solid black ;
+    border-collapse: collapse;
+    text-align: right;
+  }
+  
